--- a/src/main/webapp/app/plyr/plyr.component.html
+++ b/src/main/webapp/app/plyr/plyr.component.html
@@ -8,14 +8,10 @@
   </div>
 
   <div class="controls">
-    <button>
-      <i class="ion-backward"></i>
-    </button>
     <button (click)="togglePlayPause()">
-      <i class="ion-play" [ngClass]="isPlaying ? 'ion-pause' : 'ion-play'"></i>
-    </button>
-    <button>
-      <i class="ion-forward"></i>
+      <i class="ion-play" [ngClass]="isPlaying ? 'display-none' : ''"></i>
+
+      <i class="ion-pause" [ngClass]="isPlaying ? '' : 'display-none'"></i>
     </button>
   </div>
 
