🎉 Release v1.0.0.0 - Bugs Fixed

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -43,7 +43,7 @@
             href="#"
             class="navigation__list__item {{ playlist == selectedPlaylist ? ' navigation__list__item__selected' : '' }}"
           >
-            <i class="ion-headphone"></i>
+            <i class="icon ion-headphone"></i>
             <span>{{ playlist.title }}</span>
           </a>
         </div>
@@ -53,7 +53,7 @@
 
     <section class="playlist">
       <a (click)="openModal()" href="#">
-        <i class="ion-ios-plus-outline"></i>
+        <i class="icon ion-ios-plus-outline"></i>
 
         New Playlist
       </a>
