--- a/src/main/webapp/app/plyr/plyr.component.html
+++ b/src/main/webapp/app/plyr/plyr.component.html
@@ -9,9 +9,9 @@
 
   <div class="controls">
     <button (click)="togglePlayPause()">
-      <i class="ion-play" [ngClass]="isPlaying ? 'display-none' : ''"></i>
+      <i class="icon ion-play" [ngClass]="isPlaying ? 'display-none' : ''"></i>
 
-      <i class="ion-pause" [ngClass]="isPlaying ? '' : 'display-none'"></i>
+      <i class="icon ion-pause" [ngClass]="isPlaying ? '' : 'display-none'"></i>
     </button>
   </div>
 
